--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
             </ul>
         </nav>
     </header>
+
     <!--Booking Section-->
     <main class="main-content container">
         <div class="booking-form">
             <h3>Booking Flights</h3>
             <div class="input-group">
                 <label for="">Flying From</label>
-                <input class="inp-style" type="text" name="" placeholder="Dhake, Bangladesh">
+                <input class="inp-style" type="text" name="" placeholder="Dhaka, Bangladesh">
             </div>
             <div class="input-group">
                 <label for="">Flying To</label>
@@ -111,6 +112,7 @@
                 voluptatibus quam</p>
         </div>
     </main>
+    
     <footer class="text-center mt-5">
         <small>©2021. Discover Fly | All rights reserved by danilsonplacid | Bangladesh.</small>
     </footer>
